force-app/main/default/objects/vf_Notification__c/vf_Notification__c.object-meta.xml
<CustomObject>
    <label>Notification</label>
    <pluralLabel>Notifications</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Notification Number</label>
        <displayFormat>NOTIF-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Object to store notifications for volunteers and staff</description>
</CustomObject>