force-app/main/default/objects/vf_Notification__c/fields/Action_URL__c.field-meta.xml
<CustomField>
    <fullName>Action_URL__c</fullName>
    <label>Action URL</label>
    <type>Url</type>
    <description>URL for any action associated with the notification</description>
    <inlineHelpText>The URL for any action associated with this notification</inlineHelpText>
</CustomField>