force-app/main/default/objects/vf_Notification__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <label>Created Date</label>
    <type>DateTime</type>
    <description>Date and time the notification was created</description>
    <inlineHelpText>The date and time when this notification was created</inlineHelpText>
</CustomField>