force-app/main/default/objects/vf_Notification__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Notification message content</description>
    <inlineHelpText>The content of this notification message</inlineHelpText>
</CustomField>