force-app/main/default/objects/vf_Notification__c/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reminder</fullName>
            </value>
            <value>
                <fullName>Alert</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
                <default>true</default>
                <label>Information</label>
            </value>
            <value>
                <fullName>Action Required</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Type of notification</description>
    <inlineHelpText>The type of notification</inlineHelpText>
</CustomField>