force-app/main/default/objects/vf_Notification__c/fields/Recipient_Id__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Id__c</fullName>
    <label>Recipient ID</label>
    <length>18</length>
    <type>Text</type>
    <description>ID of the recipient (volunteer, staff, etc.)</description>
    <inlineHelpText>The ID of the notification recipient</inlineHelpText>
</CustomField>