force-app/main/default/objects/vf_Notification__c/fields/Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Type__c</fullName>
    <label>Recipient Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Volunteer</fullName>
                <default>true</default>
                <label>Volunteer</label>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Type of recipient</description>
    <inlineHelpText>The type of recipient for this notification</inlineHelpText>
</CustomField>