force-app/main/default/objects/vf_Notification__c/fields/Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date__c</fullName>
    <label>Scheduled Date</label>
    <type>DateTime</type>
    <description>Date and time the notification is scheduled for delivery</description>
    <inlineHelpText>The date and time when this notification is scheduled to be delivered</inlineHelpText>
</CustomField>