force-app/main/default/objects/vf_Notification__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
    <description>Notification subject</description>
    <inlineHelpText>The subject of this notification</inlineHelpText>
</CustomField>